<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?customContainerBackground"
    tools:context=".crudNotes.view.AlterNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_view_background"
            android:orientation="vertical"
            android:paddingStart="14dp"
            android:paddingTop="20dp"
            android:paddingEnd="14dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:autofillHints=""
                    android:background="@null"
                    android:hint="@string/title"
                    android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                    android:maxLength="50"
                    android:textColor="?customDarkTextColor"
                    android:textColorHint="?customDarkTextColor"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/imgNoteLabel"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_gravity="top"
                    android:layout_weight="2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/self_note"
                    android:contentDescription="@string/note_label" />

            </LinearLayout>


            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/note"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:maxLength="500"
                android:textColor="?customDarkTextColor"
                android:textColorHint="?customDarkTextColor"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/pbLayout"
        layout="@layout/progress_bar_fullscreen"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>