<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/menuAddNotes"
                android:icon="@drawable/ic_add_circle_black_24dp"
                android:title="@string/add_a_note" />
        </menu>
    </item>
    <item android:title="Categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menuAllNotes"
                    android:icon="@drawable/nav_bar_all_label"
                    android:title="All Notes" />
                <item
                    android:id="@+id/menuSelfNotes"
                    android:icon="@drawable/nav_bar_self_label"
                    android:title="Self" />
                <item
                    android:id="@+id/menuWorkNotes"
                    android:icon="@drawable/nav_bar_work_label"
                    android:title="Work" />
                <item
                    android:id="@+id/menuOtherNotes"
                    android:icon="@drawable/nav_bar_other_label"
                    android:title="Other" />
            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/menuLogout"
                android:icon="@drawable/ic_vpn_key_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>